--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE HTML>
-<h1>Aidan's Tic-Tac-Toe</h1>
+<html lang = "en">
+  <h1>Aidan's Tic-Tac-Toe</h1>
 <section>
   <h1>Score Board</h1>
+  <p>X: O:</p>
+  </section>
+<body>
+  <p>(team)'s turn</p>
+  </body>
