--- a/index.html
+++ b/index.html
@@ -8,3 +8,19 @@
 <body>
   <p>(team)'s turn</p>
   </body>
+<table>
+  <tr>
+    <td>X or O</tr>
+  <td>X or O</tr>
+  <td>X or O</tr>
+</tr>
+<tr>
+  <td>X or O</tr>
+  <td>X or O</tr>
+  <td>X or O</tr>
+</tr>
+<tr>
+  <td>X or O</tr>
+<td>X or O</tr>
+<td>X or O</tr>
+</table>
