--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <h1>Score Board</h1>
   <p>X: O:</p>
   </section>
-<body>
-  <p>(team)'s turn</p>
-  </body>
-<table>
+<table border="3">
+  <thead>
+    <h1>(team)'s turn</h1>
+  </thead>
   <tr>
     <td>X or O</td>
     <td>X or O</td>
