--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <h1>Aidan's Tic-Tac-Toe</h1>
 <section>
   <h1>Score Board</h1>
-  <p>X: O:</p>
+  <p>X: O:
+    <button>X Wins!</button>
+    <button>O Wins!</button>
+  </p>
   </section>
 <table border="3">
   <thead>
