--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </section>
 <table border="3">
   <thead>
-    <h1>(X or O)'s turn</h1>
+    <h1>X or O's turn</h1>
   </thead>
   <tr>
     <td>X or O</td>
