--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
   </p>
   </section>
 <table border="3">
-  <thead>
-    <h1>X or O's turn</h1>
-  </thead>
+  <thead>X or O's turn</thead>
   <tr>
     <td>X or O</td>
     <td>X or O</td>
     <td>X or O</td>
-</tr>
-<tr>
-  <td>X or O</td>
-  <td>X or O</td>
-  <td>X or O</td>
-</tr>
-<tr>
-  <td>X or O</td>
-  <td>X or O</td>
-  <td>X or O</td>
+  </tr>
+  <tr>
+    <td>X or O</td>
+    <td>X or O</td>
+    <td>X or O</td>
+  </tr>
+  <tr>
+    <td>X or O</td>
+    <td>X or O</td>
+    <td>X or O</td>
+  </tr>
 </table>
