--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <button>O Wins!</button>
   </p>
   </section>
-<table border="3">
+<table>
   <thead>X or O's turn</thead>
   <tr>
     <td>X or O</td>
