--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE HTML>
 <html lang = "en">
-  <h1>Aidan's Tic-Tac-Toe</h1>
-<section>
-  <h1>Score Board</h1>
-  <p>X: O:
-    <button>X Wins!</button>
-    <button>O Wins!</button>
-  </p>
-  </section>
-<table>
-  <thead>X or O's turn</thead>
-  <tr>
-    <td>X or O</td>
-    <td>X or O</td>
-    <td>X or O</td>
-  </tr>
-  <tr>
-    <td>X or O</td>
-    <td>X or O</td>
-    <td>X or O</td>
-  </tr>
-  <tr>
-    <td>X or O</td>
-    <td>X or O</td>
-    <td>X or O</td>
-  </tr>
-</table>
+  <head>
+    <meta charset="UTF-8" />
+    <title></title>
+  </head>
+  <body>
+    <h1>Aidan's Tic-Tac-Toe</h1>
+    <section>
+      <h1>Score Board</h1>
+      <p>X: O:
+        <button>X Wins!</button>
+        <button>O Wins!</button>
+      </p>
+    </section>
+    <table>
+      <thead>X or O's turn</thead>
+      <tr>
+        <td>X or O</td>
+        <td>X or O</td>
+        <td>X or O</td>
+      </tr>
+      <tr>
+        <td>X or O</td>
+        <td>X or O</td>
+        <td>X or O</td>
+      </tr>
+      <tr>
+        <td>X or O</td>
+        <td>X or O</td>
+        <td>X or O</td>
+      </tr>
+    </table>
+  </body>
+</html>
