--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
   <head>
     <meta charset="UTF-8" />
-    <title></title>
+    <title>tictactoe</title>
   </head>
   <body>
     <h1>Aidan's Tic-Tac-Toe</h1>
@@ -13,8 +13,8 @@
         <button>O Wins!</button>
       </p>
     </section>
+    <p>(X or O)'s turn</p>
     <table>
-      <thead>X or O's turn</thead>
       <tr>
         <td>X or O</td>
         <td>X or O</td>
