--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Aidan's Tic-Tac-Toe</h1>
     <section>
-      <h1>Score Board</h1>
+      <p>Score Board</p>
       <p>X: O:
         <button>X Wins!</button>
         <button>O Wins!</button>
