--- a/index.html
+++ b/index.html
@@ -6,30 +6,32 @@
   </head>
   <body>
     <h1>Aidan's Tic-Tac-Toe</h1>
-    <h2>
+    <section>
       <p>Score Board</p>
       <p>X: O:
         <button>X Wins!</button>
         <button>O Wins!</button>
       </p>
-    </h2>
-    <p>(X or O)'s turn</p>
-    <table>
-      <tr>
-        <td>X or O</td>
-        <td>X or O</td>
-        <td>X or O</td>
-      </tr>
-      <tr>
-        <td>X or O</td>
-        <td>X or O</td>
-        <td>X or O</td>
-      </tr>
-      <tr>
-        <td>X or O</td>
-        <td>X or O</td>
-        <td>X or O</td>
-      </tr>
-    </table>
+    </section>
+    <section>
+      <p>(X or O)'s turn</p>
+      <table>
+        <tr>
+          <td>X or O</td>
+          <td>X or O</td>
+          <td>X or O</td>
+        </tr>
+        <tr>
+          <td>X or O</td>
+          <td>X or O</td>
+          <td>X or O</td>
+        </tr>
+        <tr>
+          <td>X or O</td>
+          <td>X or O</td>
+          <td>X or O</td>
+        </tr>
+      </table>
+    </section>
   </body>
 </html>
