--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <body>
     <h1>Aidan's Tic-Tac-Toe</h1>
     <section>
-      <p>Score Board</p>
-      <p>X: O:
-        <button>X Wins!</button>
-        <button>O Wins!</button>
-      </p>
+      <h2>Score Board</h2>
+      <div>X: 0</div>
+      <div>O: 0</div>
+      <button>X Wins!</button>
+      <button>O Wins!</button>
     </section>
-    <section>
+    <div>
       <p>(X or O)'s turn</p>
       <table>
         <tr>
@@ -32,6 +32,6 @@
           <td>X or O</td>
         </tr>
       </table>
-    </section>
+    </div>
   </body>
 </html>
