--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>tictactoe</title>
+    
+    <style>
+      body {
+        max-width: 900px;
+        margin: auto;
+      }
+    </style>
   </head>
   <body>
     <h1>Aidan's Tic-Tac-Toe</h1>
