--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       }
       
       section {
-        background-color: 0000FF;
+        background-color: blue;
         border: solid;
       }
       
       table {
         border: solid;
-        border-color: 0000FF;
+        border-color: rebeccapurple;
       }
     </style>
   </head>
