--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       }
       
       section {
-        background-color: blue;
+        background-color: lightblue;
         border: solid;
       }
       
       table {
         border: solid;
-        border-color: rebeccapurple;
+        border-color: red;
       }
     </style>
   </head>
