--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       }
       
       section {
-        background-color: lightblue;
+        font-color: white;
+        background-color: blue;
         border: solid;
       }
       
