--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       
       section {
         background-color: blue;
-        border: solid;
+        border: ridge;
       }
       
       table {
