--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       
       section {
-        background-color: blue;
+        background-color: pink;
         border: ridge;
       }
       
