--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         border: ridge;
       }
       
-      table {
-        
+      td {
+        border: solid;
+        border-color: lightskyblue;
       }
     </style>
   </head>
