--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       }
       
       table {
+        border-spacing: 0;
         width: 100%;
       }
       
@@ -83,14 +84,44 @@
           </td>
         </tr>
         <tr>
-          <td>X or O</td>
-          <td>X or O</td>
-          <td>X or O</td>
+          <td>
+            <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
+          <td>
+            <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
+          <td>
+            <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
         </tr>
         <tr>
-          <td>X or O</td>
-          <td>X or O</td>
-          <td>X or O</td>
+          <td>
+             <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
+          <td>
+            <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
+          <td>
+            <label>
+              <input type="checkbox" />
+              X or O
+            </label>
+          </td>
         </tr>
       </table>
     </div>
