--- a/index.html
+++ b/index.html
@@ -137,12 +137,10 @@
         winnerButtons.forEach(function (button) {
           button.addEventListener('click', function () {
             var winner = button.getAttribute('data-winner');
-            var score = document.querySelector('#' + winner + '-winner');
+            var score = document.querySelector('#' + winner + '-score');
             
             scores[winner] = scores[winner] + 1;
             score.innerText = scores[winner];
-            
-            alert('click: ' + winner);
           });
         });
       }());
