--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
             
             scores[winner] = scores[winner] + 1;
             score.innerText = scores[winner];
+            
+            // TO DO: Reset the playing board!
           });
         });
       }());
